--- a/views/send.pug
+++ b/views/send.pug
@@ -4,4 +4,7 @@ form(action="/send",method="POST")
     div
         label(for="message") Enter message
         input(type="text",name="message")
+    div
+        label(for="key") Make up a Key
+        input(type="text",name="key")
     button(type="submit") Submit
