--- a/views/send.pug
+++ b/views/send.pug
@@ -1,13 +1,28 @@
-title #{docTitle}
+head
+    // Required meta tags
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    // Bootstrap CSS
+    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css', integrity='sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z', crossorigin='anonymous')
+    title #{docTitle}   
+  
 body
-    form(action="/send",method="POST")
-            div
-                label(for="message") Message
-                input(type="text",name="message")
-            div
-                label(for="key") Key
-                input(type="text",name="key")
-            
-            button(type="submit") Add Product
     
+    .card
+        .card-body
+            form(action="/send",method="POST")
+                .form-group
+                    label(for='formGroupExampleInput') Message
+                    input#formGroupExampleInput.form-control(type='text', placeholder='Enter message', name="message")
+                .form-group
+                    label(for='formGroupExampleInput2') Enter key
+                    input#formGroupExampleInput2.form-control(type='text', placeholder='Enter key',name="key")
 
+                button.btn.btn-primary(type='submit') Enter
+
+
+    // Optional JavaScript
+    // jQuery first, then Popper.js, then Bootstrap JS
+    script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js', integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj', crossorigin='anonymous')
+    script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js', integrity='sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN', crossorigin='anonymous')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js', integrity='sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV', crossorigin='anonymous')
